--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
         <nav>
             <div class="logo">Portfolio</div>
             <div class="nav-links">
-                <a href="Mostak Protfolio.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="About Me.html">About</a>
                 <a href="Protfolio.html">Portfolio</a>
                 <a href="Service.html">Service</a>
