--- a/Contact.html
+++ b/Contact.html
@@ -339,7 +339,7 @@
              </div>
               <div class="profile-container">
                 <div class="profile-border">
-                 <img src="Contack.png" alt="Profile" height="300" width="250" class="profile-image">
+                 <img src="Contact.png" alt="Profile" height="300" width="250" class="profile-image">
                 </div>
              </div>
         </section>
